# GetTrafficDataUsingIoT

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
AWS Resources Deploy/: setUpIoTFlow.py
components/esp-aws-iot/aws-iot-device-sdk-embedded-C/samples/linux/jobs_sample/: aws_iot_config.h
components/esp-aws-iot/aws-iot-device-sdk-embedded-C/src/: aws_iot_mqtt_client_connect.c
components/esp-aws-iot/examples/subscribe_publish/main/: subscribe_publish_sample.c
main/: CMakeLists.txt  app_main.c  aws_connect.c  button_driver.c
main/include/: aws_connect.h  aws_iot_config.h  button_driver.h
